<resources>
    <string name="app_name">WeatherWhen</string>
    <string name="error_no_internet_connection">No Internet connection detected</string>
    <string name="on_location_permission_denided">Location is needed to display weather forecasts</string>
    <string name="undo_string">Undo</string>
    <string name="temperature_unit_celsius">C</string>
    <string name="demo_temp">32</string>
    <string name="demo_desc">Hanoi | day | smt</string>
    <string name="demo_string">Dummy</string>
    <string name="night">Night</string>
    <string name="temperature_degree">O</string>
    <string name="day">Day</string>
    <string name="error_no_forecasts">Error No Forecasts</string>
    <string name="percent">%</string>
    <string name="header_append_night">|  Night</string>
    <string name="header_append_day">|  Day</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="demo_time">08:30 AM</string>
    <string name="demo_date">Monday August 12,2019</string>
    <string name="loading">Loading...</string>
    <string name="success">Success</string>
</resources>
