<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageViewBgDay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_sunny"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewBgNight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_night"
        android:contentDescription="@string/app_name"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- include later -->
    <TextView
        android:id="@+id/textTemp"
        style="@style/TextViewTemperature"
        android:text="@string/demo_temp"
        android:textSize="@dimen/sp_120"
        app:layout_constraintEnd_toStartOf="@+id/textViewTempDegree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLocationDate" />

    <TextView
        android:id="@+id/textViewTempDegree"
        style="@style/TextViewTemperature"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:text="@string/temperature_degree"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="@+id/textTemp"
        app:layout_constraintEnd_toStartOf="@+id/textViewUnitCelsius"
        app:layout_constraintStart_toEndOf="@+id/textTemp"
        app:layout_constraintTop_toTopOf="@+id/textTemp"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/textViewUnitCelsius"
        style="@style/TextViewTemperature"
        android:text="@string/temperature_unit_celsius"
        android:textSize="@dimen/sp_120"
        app:layout_constraintBottom_toBottomOf="@+id/textTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewTempDegree"
        app:layout_constraintTop_toTopOf="@+id/textTemp" />

    <TextView
        android:id="@+id/textLocationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:fontFamily="serif-monospace"
        android:text="@string/demo_desc"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/textViewRainPropValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/demo_string"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewRainProp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewRainProp"
        app:layout_constraintTop_toTopOf="@+id/imageViewRainProp" />

    <ImageView
        android:id="@+id/imageViewRainProp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toStartOf="@+id/textViewRainPropValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhrase"
        app:srcCompat="@drawable/ic_umbrella" />

    <ImageView
        android:id="@+id/imageViewWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/imageViewRainProp"
        app:layout_constraintStart_toStartOf="@+id/imageViewRainProp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewRainProp"
        app:srcCompat="@drawable/ic_wind" />

    <TextView
        android:id="@+id/textViewWindSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/demo_string"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewWindSpeed"
        app:layout_constraintStart_toEndOf="@+id/imageViewWindSpeed"
        app:layout_constraintTop_toTopOf="@+id/imageViewWindSpeed" />

    <!-- end include later -->

    <TextView
        android:id="@+id/textViewDayNight"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:background="@drawable/custom_quarter_circle"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/font_wire_one"
        android:gravity="bottom|start"
        android:padding="@dimen/dp_12"
        android:text="@string/night"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:text="@string/demo_string"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTemp" />

</androidx.constraintlayout.widget.ConstraintLayout>
